# site

./: .eslintrc.json  .gitignore  LICENSE  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
.github/: dependabot.yml
.github/workflows/: github-pages.yml
backend/: pyproject.toml
frontend/: .env-example  .eslintrc.json  .gitignore  LICENSE  next.config.js  package-lock.json  tailwind.config.ts
frontend/src/app/: about.md  about.tsx  config.ts  globals.css  layout.tsx  page.tsx  projects.tsx
frontend/src/components/: externalLinkStyled.tsx  footer.tsx  menu.tsx  modal.tsx  socialMediaLink.tsx
frontend/src/lib/: removeNonUniqueTopic.ts  useRequests.ts
public/: index.html
src/: AboutPage.css  AboutPage.js  App.css  App.js  Misc.css  Misc.js  ProjectsPage.css  ProjectsPage.js  index.js
src/app/: about.md  about.tsx  config.ts  globals.css  layout.tsx  misc.tsx  page.tsx  projects.tsx  projectsPage.tsx
src/app/projects/: ProjectsPage.tsx  layout.tsx  page.tsx  projectsPage.tsx
src/components/: externalLinkStyled.tsx  footer.tsx  menu.tsx  modal.tsx  socialLink.tsx
src/lib/: useRequests.ts
